--- a/ara/graph/cgraph/meson.build
+++ b/ara/graph/cgraph/meson.build
@@ -16,6 +16,7 @@ graph_data_mod = py3_inst.extension_module('graph_data',
   graph_data_pyx_cpp,
   'graph.cpp',
   'arguments.cpp',
+  'mix.cpp',
   dependencies: [py3_inst.dependency(), llvm_dep, boost_dep, graph_tool_dep, common_dep, pyllco_dep, svf_dep]
 )
 graph_data_dir = meson.current_build_dir()
